commit Friday evening - updating to GitHub

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 	
+    <!--**************************************************************************
+    This is the version on GitHub --- 1st commit
+    ****************************************************************************-->
 	
 <body class="background_layer">
 
