--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <div class="row">
           <div class="col-12">
             <p>Copyright 2019 © Secret Family Recipes. All rights reserved.</p>
+            <p>Copyright 2019 © Secret Family Recipes. All rights reserved.</p>
           </div>
         </div>
       </div>
