--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
    <title>BWSecret Family Recipes</title>
     <!-- Bootstrap -->
     <link href="index.bootstrap-4.3.1.css" rel="stylesheet">
+    <link href="cards.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-purple">
@@ -32,13 +34,13 @@
         </div>
       </div>
     </div>
-<div class="container">
-  <div class="row">
-        <div class="container py-sm-4" align="center"> </div>
+<div class="container"  width="1200">
+  <div class="row cards">
+        <div class="container py-sm-4" width="1200" align="center"> </div>
     <div class="row">
-        <div class="col-xl-4"><img src="index.images/pasta.png" width="340" height="500" alt=""/> </div>
-      <div class="col-lg-3 col-md-6 col-12 col-xl-4"><img src="index.images/chili.png" width="340" height="500" alt=""/> </div>
-        <div class="col-xl-4"><img src="index.images/waffles.png" width="340" height="500" alt=""/> </div>
+        <div class="col-xl-4"><img src="index.images/pasta.png" width="320" height="500" alt=""/> </div>
+      <div class="col-md-6 col-12 col-xl-4 col-lg-4"><img src="index.images/chili.png" width="320" height="500" alt=""/> </div>
+        <div class="col-xl-4"><img src="index.images/waffles.png" width="320" height="500" alt=""/> </div>
 </div>
   </div>
   </div>
@@ -47,7 +49,7 @@
       <div class="row">
 <div class="col-lg-4 col-md-6 col-12 col-xl-12">
 	<article>
-  <h2 class="c18">Anyone can go out and buy a cook book these days, but I want a place to store all my secret family recipes, handed down from generation to generation. The little cards my grandma wrote the recipes on in her beautiful cursive are getting lost or are hard to read. I need somewhere secure to keep my recipes with me at all times!
+  <h3class="c18">Anyone can go out and buy a cook book these days, but I want a place to store all my secret family recipes, handed down from generation to generation. The little cards my grandma wrote the recipes on in her beautiful cursive are getting lost or are hard to read. I need somewhere secure to keep my recipes with me at all times!
 		<p class="c24">And thats why we developed <span class="j29">SECRET FAMILY RECIPES</span> - We wanted everyone to have the opportunity to keep what is precious, not only to us as individuals, but also to the generations to come. </p></h2>
 		
 	</article>
@@ -72,8 +74,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright 2019 © Secret Family Recipes. All rights reserved.</p>
-            <p>Copyright 2019 © Secret Family Recipes. All rights reserved.</p>
+            <p>Copyright 2020 © Secret Family Recipes. All rights reserved.</p>
+           
           </div>
         </div>
       </div>
