added styles to 1st paragraph

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="row">
 <div class="col-lg-4 col-md-6 col-12 col-xl-12">
 	<article>
-  <h3 class="bottomParagraph">Anyone can go out and buy a cook book these days, but I want a place to store all my secret family recipes, handed down from generation to generation. The little cards my grandma wrote the recipes on in her beautiful cursive are getting lost or are hard to read. I need somewhere secure to keep my recipes with me at all times!
+  <h3 class="bottomParagraph c18">Anyone can go out and buy a cook book these days, but I want a place to store all my secret family recipes, handed down from generation to generation. The little cards my grandma wrote the recipes on in her beautiful cursive are getting lost or are hard to read. I need somewhere secure to keep my recipes with me at all times!
 		<p class="c24">And thats why we developed <span class="j29">SECRET FAMILY RECIPES</span> - We wanted everyone to have the opportunity to keep what is precious, not only to us as individuals, but also to the generations to come. </p></h2>
 		
 	</article>
